Get Subscribers allocated to catcher by uid
