# api/swagger/swagger.yaml
@@ -202,6 +202,30 @@ paths:
           schema:
             # a pointer to a definition
             $ref: "#/definitions/ErrorResponse"
+  /catchers/{uid}/subscribers:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: registration
+    get:
+      description: Returns Catcher info to the caller
+      # used as the method name of the controller
+      operationId: getSubscribersAllocatedToCatcher
+      parameters:
+        - in: path
+          name: uid
+          description: Catcher Unique Id
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/SuccessResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
