# db/catchers.js
@@ -36,22 +36,23 @@ function getByUid(uid) {
             .first();
 }
 
-function getSubscribersAllocatedToCatcher(id) {
+function getSubscribersAllocatedToCatcher(uid) {
     return CatcherAllocation()
+            .innerJoin('users as u1', 'catcher_allocation.catcher_id', 'u1.id')
             .innerJoin('catchers', 'catcher_allocation.catcher_id', 'catchers.user_id')
-            .innerJoin('users', 'catcher_allocation.subscriber_id', 'users.id')
+            .innerJoin('users as u2', 'catcher_allocation.subscriber_id', 'u2.id')
             .innerJoin('subscribers', 'catcher_allocation.subscriber_id', 'subscribers.user_id')
-            .where('catchers.user_id', id)
+            .where('u1.uid', uid)
             .select('subscribers.subscriber_id as ref_id'
-                ,'users.uid'
-                ,'users.firstName'
-                ,'users.lastName'
-                ,'users.address'
-                ,'users.city'
-                ,'users.county'
-                ,'users.postcode'
-                ,'users.phone'
-                ,'users.email');
+                ,'u2.uid'
+                ,'u2.firstName'
+                ,'u2.lastName'
+                ,'u2.address'
+                ,'u2.city'
+                ,'u2.county'
+                ,'u2.postcode'
+                ,'u2.phone'
+                ,'u2.email');
 }
 
 function add(catcher, catcherIdPrefix) {  
